--- a/static/resources/style.css
+++ b/static/resources/style.css
@@ -24,7 +24,6 @@ html {
         font-size: 72px;
         font-weight: 700;
         margin: 0 0 -43px 0;
-        font-style: italic;
         pointer-events: none;
         color: white;
         /* backdrop-filter: invert(1); */
@@ -260,4 +259,13 @@ button {
   background: transparent;
   border: transparent;
   color: #ffffff30;
+}
+
+.logo {
+  vertical-align: middle;
+}
+
+.logotext {
+  display: inline-flex;
+  align-items: center;
 }
